--- a/latex/implementation.tex
+++ b/latex/implementation.tex
@@ -1,6 +1,8 @@
-\subsection{Implementation}\label{implementation}
+% !TEX root = seminararbeit.tex
 
-\subsubsection{Used Tech}\label{used-tech}
+\section{Implementation}\label{implementation}
+
+\subsection{Used Tech}\label{used-tech}
 
 \paragraph{angular}\label{angular}
 
@@ -20,7 +22,7 @@
   highly dynamic views (like the tree view)
 \end{itemize*}
 
-\subsubsection{Problems}\label{problems}
+\subsection{Problems}\label{problems}
 
 \paragraph{synchronization Process}\label{synchronization-process}
 
@@ -137,7 +139,7 @@ call the node component again with each child node and return their
 return values wrapped in an element 4. if the graph node has no children
 return an empty element
 
-\subparagraph{Why the chosen approach will
+\subsubsection{Why the chosen approach will
 work}\label{why-the-chosen-approach-will-work}
 
 After trying different solutions it turned out the a functional solution
