--- a/latex/result.tex
+++ b/latex/result.tex
@@ -1,4 +1,6 @@
-\subsection{Results}\label{results}
+% !TEX root = seminararbeit.tex
 
-\subsubsection{Why Scegratoo is the best since sliced
+\section{Results}\label{results}
+
+\subsection{Why Scegratoo is the best since sliced
 Bread}\label{why-scegratoo-is-the-best-since-sliced-bread}
