--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,13 +1,48 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Danny Arnold at 2012-04-16 21:02:56 +0200 
+%% Created for kietsy at 2015-08-09 22:41:56 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{wikigizmo,
+	Date-Added = {2015-08-09 20:41:48 +0000},
+	Date-Modified = {2015-08-09 20:41:56 +0000},
+	Url = {https://en.wikipedia.org/wiki/Gizmo}}
+
+@webpage{x3ddragsensornode,
+	Date-Added = {2015-08-09 20:23:00 +0000},
+	Date-Modified = {2015-08-09 20:23:24 +0000},
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/X3DDragSensorNode.html}}
+
+@webpage{threejseditor,
+	Date-Added = {2015-08-09 20:21:17 +0000},
+	Date-Modified = {2015-08-09 20:21:32 +0000},
+	Url = {http://threejs.org/editor/}}
+
+@webpage{x3dgizmo,
+	Date-Added = {2015-08-09 20:21:04 +0000},
+	Date-Modified = {2015-08-09 20:21:10 +0000},
+	Url = {http://doc.x3dom.org/tutorials/animationInteraction/transformations/example.html}}
+
+@webpage{blenderwiki,
+	Date-Added = {2015-08-09 20:14:02 +0000},
+	Date-Modified = {2015-08-09 20:14:11 +0000},
+	Url = {http://wiki.blender.org/index.php/Doc:2.4/Manual/3D_interaction/Transform_Control/Manipulators}}
+
+@webpage{roundtrip3dwebsite,
+	Date-Added = {2015-08-09 19:55:38 +0000},
+	Date-Modified = {2015-08-09 19:55:59 +0000},
+	Lastchecked = {2015-07-24 18:17},
+	Url = {http://vr.tu-freiberg.de/roundtrip3d/}}
+
+@webpage{Antiplagiatserklrung,
+	Date-Added = {2015-08-09 19:13:08 +0000},
+	Date-Modified = {2015-08-09 19:15:00 +0000},
+	Url = {http://www.as.uni-heidelberg.de/studium/downloads.php}}
 
 @misc{WikiEntscheidung,
 	Date-Added = {2012-04-16 19:02:22 +0000},
@@ -23,7 +58,8 @@
 	Month = {04},
 	Title = {LaTeX},
 	Url = {http://en.wikibooks.org/wiki/LaTeX},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {http://en.wikibooks.org/wiki/LaTeX}}
 
 @misc{SeminarTemplate,
 	Author = {Jannik Str{\"o}tgen},
@@ -32,7 +68,8 @@
 	Month = {05},
 	Title = {Latextemplate f{\"u}r die Seminararbeit},
 	Url = {http://dbs.ifi.uni-heidelberg.de/fileadmin/docs/},
-	Year = {2010}}
+	Year = {2010},
+	Bdsk-Url-1 = {http://dbs.ifi.uni-heidelberg.de/fileadmin/docs/}}
 
 @misc{Versionsraum,
 	Date-Added = {2012-04-16 15:06:52 +0000},
@@ -93,7 +130,8 @@
 	Month = {04},
 	Title = {Entscheidungstheorie},
 	Url = {http://de.wikipedia.org/wiki/Entscheidungstheorie},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Entscheidungstheorie}}
 
 @misc{Entscheidungsverfahren,
 	Date-Added = {2012-04-15 08:31:53 +0000},
