--- a/latex/seminararbeit.tex
+++ b/latex/seminararbeit.tex
@@ -23,7 +23,7 @@
 % PACKAGES:
 
 % Use German :
-\usepackage[USenglish, ngerman]{babel}
+\usepackage[USenglish]{babel}
 % Input encoding
 \usepackage[utf8]{inputenc}
 % Font encoding
@@ -76,12 +76,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Titel, Autor, Seminar, Semester, Dozent %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\mytitle}{SceGraToo}
+\newcommand{\mytitle}{Web-based 3D-scene composition for further server-sided processing in the Roundtrip3D project}
+\newcommand{\mytitleShort}{SceGraToo}
 \newcommand{\myauthor}{Danny Arnold}
-\newcommand{\myseminar}{Seminar zu Awareness-Algorithmen zur Präsens in Kommunikationsräumen}
-\newcommand{\mysemester}{Sommersemester 2011}
-\newcommand{\mydozent}{Prof. Froitzheim}
-\newcommand{\mydozentTwo}{Prof. Jasper}
+\newcommand{\myseminar}{Web-basierte Komposition von 3D-Szenen für deren}
+\newcommand{\mydozent}{Prof. Jung}
+\newcommand{\mydozentTwo}{Matthias Lenk}
+\newcommand{\myseminarTwo}{serverseitige Weiterverarbeitung im Roundtrip3D Projekt}
+\newcommand{\mysemester}{Summer Semester 2015}
 
 % OTHER SETTINGS:
 % \setlength{\parindent}{0in}
@@ -105,7 +107,7 @@
 
 % Pagestyle:
 \pagestyle{myheadings}
-\markright{\myauthor: \mytitle}
+\markright{\myauthor: \mytitleShort}
 
 % start indexing
 \makeindex
@@ -117,12 +119,13 @@
 \begin{titlepage}
 \begin{tabular}[l]{l}
 % Angaben zum Seminar
-Technische Universität Bergakademie Freiberg\\
-Fakultät für Mathematik und Informatik\\
+TU Bergakademie Freiberg\\
+Faculty for Mathematics and Computer Science\\
 \mysemester\\
-Seminar: \myseminar\\
-Dozenten: \mydozent\\
-\phantom{Dozenten: }\mydozentTwo\\
+German Title: \myseminar\\
+\phantom{German Title: }\myseminarTwo\\
+Supervisor: \mydozent\\
+\phantom{Supervisor: }\mydozentTwo\\
 \end{tabular}
 
 \vspace{4cm}
@@ -140,10 +143,10 @@ Dozenten: \mydozent\\
 % Persönliche Angaben
 \begin{tabular}[l]{ll}
 Name:           & \myauthor\\
-Matrikelnummer: & 52315\\
-Studiengang:    & Angewandte Informatik\\
+Matriculation Number: & 52315\\
+Major:    & Applied Computer Science\\
 Email: & danny.arnold@student.tu-freiberg.de\\
-Datum der Abgabe: & \today \\
+Date: & \today \\
 \end{tabular}
 
 \end{titlepage}
@@ -159,20 +162,17 @@ Datum der Abgabe: & \today \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% <Antiplagiatserklärung> %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \thispagestyle{empty}
 \vspace*{100pt}
-Hiermit versichere ich \textbf{\myauthor}, dass ich die Hausarbeit mit dem Titel \textbf{\mytitle}
-im Seminar \textbf{\myseminar}
-im \textbf{\mysemester}
-bei \textbf{\mydozent} und \textbf{\mydozentTwo}
-selbstständig und nur mit den in der Arbeit angegebenen Hilfsmitteln verfasst habe.
-Zitate sowie der Gebrauch fremder Quellen, Texte und Hilfsmittel habe ich nach den
-Regeln wissenschaftlicher Praxis eindeutig gekennzeichnet.
-Mir ist bewusst, dass ich fremde Texte und Textpassagen nicht als meine eigenen ausgeben darf und dass ein
-Verstoß gegen diese Grundregel des wissenschaftlichen Arbeitens als Täuschungs- und
-Betrugsversuch gilt, der entsprechende Konsequenzen nach sich zieht. Diese bestehen
-in der Bewertung der Prüfungsleistung mit \enquote{nicht ausreichend} (5,0) sowie ggf. weiteren
-Maßnahmen.
-
-Außerdem bestätige ich, dass diese Arbeit in gleicher oder ähnlicher Form noch in keinem anderen Seminar vorgelegt wurde.
+I, \textbf{\myauthor}, declare that I have read and understood
+the material exemplifying and explaining cases of plagiarism, and that my paper contains no plagiarized
+material and is solely my own work. I am aware of the fact that should my paper be found to
+contain plagiarized material or to have been written in part or whole by someone else, this will
+entail serious consequences. These include the following:
+1. The reason for my failure will be recorded by the department.
+2. I will not be given credit for the course.
+3. The Honor Board may review my paper and suggest additional sanctions, including
+expulsion.
+Furthermore I am aware that submitting the same or a revised paper in two separate courses without
+the instructors' explicit consent will result in similar consequences.\cite{Antiplagiatserklrung}
 \vspace*{50pt}
 
 Freiberg, den \today \hspace{2cm} \underline{\phantom{Platz für die Unterschrift}}
@@ -223,7 +223,7 @@ Thanks!
 \include{implementation}
 
 \include{result}
- 
+
 \listoftables
 
 \clearpage
