--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,165 +1,123 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-09 22:41:56 +0200 
+%% Created for kietsy at 2015-08-10 13:40:05 +0200
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@webpage{planesensor,
+	Date-Added = {2015-08-10 11:36:32 +0000},
+	Date-Modified = {2015-08-10 11:36:42 +0000},
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/PlaneSensor.html}}
+
+@webpage{cylindersensor,
+	Date-Added = {2015-08-10 11:36:24 +0000},
+	Date-Modified = {2015-08-10 11:36:30 +0000},
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/CylinderSensor.html}}
+
+@webpage{spheresensor,
+	Date-Added = {2015-08-10 11:35:13 +0000},
+	Date-Modified = {2015-08-10 11:35:30 +0000},
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/SphereSensor.html}}
+
+@conference{LCR07,
+	Author = {Martin Lesage, Martin Lesage, Gilles Ra{\^\i}che},
+	Date-Added = {2015-08-10 11:30:30 +0000},
+	Date-Modified = {2015-08-10 11:30:30 +0000},
+	Title = {A Blender Plugin for Collaborative Work on the Articiel Platform},
+	Year = {2007}}
+
+@webpage{webgl,
+	Date-Added = {2015-08-09 23:41:20 +0000},
+	Date-Modified = {2015-08-09 23:41:24 +0000},
+	Url = {https://www.khronos.org/webgl/},
+	Bdsk-Url-1 = {https://www.khronos.org/webgl/}}
+
+@webpage{canvas,
+	Date-Added = {2015-08-09 23:40:50 +0000},
+	Date-Modified = {2015-08-09 23:40:53 +0000},
+	Url = {http://www.w3.org/TR/html5/scripting-1.html#the-canvas-element},
+	Bdsk-Url-1 = {http://www.w3.org/TR/html5/scripting-1.html#the-canvas-element}}
+
+@webpage{svg,
+	Date-Added = {2015-08-09 23:35:06 +0000},
+	Date-Modified = {2015-08-09 23:35:11 +0000},
+	Url = {http://www.w3.org/Graphics/SVG/},
+	Bdsk-Url-1 = {http://www.w3.org/Graphics/SVG/}}
+
+@webpage{x3dom,
+	Date-Added = {2015-08-09 23:31:38 +0000},
+	Date-Modified = {2015-08-09 23:31:42 +0000},
+	Url = {http://www.x3dom.org},
+	Bdsk-Url-1 = {http://www.x3dom.org}}
+
+@webpage{realityprime,
+	Date-Added = {2015-08-09 23:05:39 +0000},
+	Date-Modified = {2015-08-09 23:07:03 +0000},
+	Lastchecked = {2015-07-23 15:59},
+	Url = {http://www.realityprime.com/blog/2007/06/scenegraphs-past-present-and-future/},
+	Bdsk-Url-1 = {http://www.realityprime.com/blog/2007/06/scenegraphs-past-present-and-future/}}
 
 @webpage{wikigizmo,
 	Date-Added = {2015-08-09 20:41:48 +0000},
 	Date-Modified = {2015-08-09 20:41:56 +0000},
-	Url = {https://en.wikipedia.org/wiki/Gizmo}}
+	Url = {https://en.wikipedia.org/wiki/Gizmo},
+	Bdsk-Url-1 = {https://en.wikipedia.org/wiki/Gizmo}}
 
 @webpage{x3ddragsensornode,
 	Date-Added = {2015-08-09 20:23:00 +0000},
 	Date-Modified = {2015-08-09 20:23:24 +0000},
-	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/X3DDragSensorNode.html}}
+	Url = {http://doc.x3dom.org/author/PointingDeviceSensor/X3DDragSensorNode.html},
+	Bdsk-Url-1 = {http://doc.x3dom.org/author/PointingDeviceSensor/X3DDragSensorNode.html}}
 
 @webpage{threejseditor,
 	Date-Added = {2015-08-09 20:21:17 +0000},
 	Date-Modified = {2015-08-09 20:21:32 +0000},
-	Url = {http://threejs.org/editor/}}
+	Url = {http://threejs.org/editor/},
+	Bdsk-Url-1 = {http://threejs.org/editor/}}
 
 @webpage{x3dgizmo,
 	Date-Added = {2015-08-09 20:21:04 +0000},
 	Date-Modified = {2015-08-09 20:21:10 +0000},
-	Url = {http://doc.x3dom.org/tutorials/animationInteraction/transformations/example.html}}
+	Url = {http://doc.x3dom.org/tutorials/animationInteraction/transformations/example.html},
+	Bdsk-Url-1 = {http://doc.x3dom.org/tutorials/animationInteraction/transformations/example.html}}
 
 @webpage{blenderwiki,
 	Date-Added = {2015-08-09 20:14:02 +0000},
 	Date-Modified = {2015-08-09 20:14:11 +0000},
-	Url = {http://wiki.blender.org/index.php/Doc:2.4/Manual/3D_interaction/Transform_Control/Manipulators}}
+	Url = {http://wiki.blender.org/index.php/Doc:2.4/Manual/3D_interaction/Transform_Control/Manipulators},
+	Bdsk-Url-1 = {http://wiki.blender.org/index.php/Doc:2.4/Manual/3D_interaction/Transform_Control/Manipulators}}
 
 @webpage{roundtrip3dwebsite,
 	Date-Added = {2015-08-09 19:55:38 +0000},
 	Date-Modified = {2015-08-09 19:55:59 +0000},
 	Lastchecked = {2015-07-24 18:17},
-	Url = {http://vr.tu-freiberg.de/roundtrip3d/}}
+	Url = {http://vr.tu-freiberg.de/roundtrip3d/},
+	Bdsk-Url-1 = {http://vr.tu-freiberg.de/roundtrip3d/}}
 
 @webpage{Antiplagiatserklrung,
 	Date-Added = {2015-08-09 19:13:08 +0000},
 	Date-Modified = {2015-08-09 19:15:00 +0000},
-	Url = {http://www.as.uni-heidelberg.de/studium/downloads.php}}
+	Url = {http://www.as.uni-heidelberg.de/studium/downloads.php},
+	Bdsk-Url-1 = {http://www.as.uni-heidelberg.de/studium/downloads.php}}
 
-@misc{WikiEntscheidung,
-	Date-Added = {2012-04-16 19:02:22 +0000},
-	Date-Modified = {2012-04-16 19:02:52 +0000},
-	Lastchecked = {Montag, 16. April 2012},
-	Title = {Entscheidung -- Wikipedia},
-	Url = {http://de.wikipedia.org/wiki/Entscheidung},
-	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Entscheidung}}
-
-@misc{WikiLatex,
-	Date-Added = {2012-04-16 16:18:18 +0000},
-	Date-Modified = {2012-04-16 16:19:00 +0000},
-	Month = {04},
-	Title = {LaTeX},
-	Url = {http://en.wikibooks.org/wiki/LaTeX},
-	Year = {2012},
-	Bdsk-Url-1 = {http://en.wikibooks.org/wiki/LaTeX}}
-
-@misc{SeminarTemplate,
-	Author = {Jannik Str{\"o}tgen},
-	Date-Added = {2012-04-16 16:03:33 +0000},
-	Date-Modified = {2012-04-16 16:04:45 +0000},
-	Month = {05},
-	Title = {Latextemplate f{\"u}r die Seminararbeit},
-	Url = {http://dbs.ifi.uni-heidelberg.de/fileadmin/docs/},
-	Year = {2010},
-	Bdsk-Url-1 = {http://dbs.ifi.uni-heidelberg.de/fileadmin/docs/}}
-
-@misc{Versionsraum,
-	Date-Added = {2012-04-16 15:06:52 +0000},
-	Date-Modified = {2012-04-16 15:08:05 +0000},
-	Month = {04},
-	Title = {Versionsraum},
-	Url = {http://de.wikipedia.org/wiki/Versionsraum},
-	Year = {2012},
-	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Versionsraum}}
-
-@misc{find_s,
-	Date-Added = {2012-04-15 17:09:41 +0000},
-	Date-Modified = {2012-04-15 17:10:55 +0000},
-	Lastchecked = {Sonntag, 15. April 2012},
-	Title = {artificial intelligence - FIND-S Algorithm - simple question - Stack Overflow},
-	Url = {http://stackoverflow.com/questions/5757233/find-s-algorithm-simple-question},
-	Bdsk-Url-1 = {http://stackoverflow.com/questions/5757233/find-s-algorithm-simple-question}}
-
-@inproceedings{Brdiczka:2005:SLA:1107548.1107612,
-	Acmid = {1107612},
-	Address = {New York, NY, USA},
-	Author = {Brdiczka, Oliver and Reignier, Patrick and Crowley, James L.},
-	Booktitle = {Proceedings of the 2005 joint conference on Smart objects and ambient intelligence: innovative context-aware services: usages and technologies},
-	Date-Added = {2012-04-15 09:29:59 +0000},
-	Date-Modified = {2012-04-15 09:29:59 +0000},
-	Doi = {10.1145/1107548.1107612},
-	Isbn = {1-59593-304-2},
-	Location = {Grenoble, France},
-	Numpages = {6},
-	Pages = {259--264},
-	Publisher = {ACM},
-	Series = {sOc-EUSAI '05},
-	Title = {Supervised learning of an abstract context model for an intelligent environment},
-	Url = {http://doi.acm.org/10.1145/1107548.1107612},
-	Year = {2005},
-	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1107548.1107612},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1107548.1107612}}
-
-@inproceedings{Muhlenbrock:2004:LDU:977406.978698,
-	Acmid = {978698},
-	Address = {Washington, DC, USA},
-	Author = {M\"{u}hlenbrock, Martin and Brdiczka, Oliver and Snowdon, Dave and Meunier, Jean-Luc},
-	Booktitle = {Proceedings of the Second IEEE International Conference on Pervasive Computing and Communications (PerCom'04)},
-	Date-Added = {2012-04-15 09:06:59 +0000},
-	Date-Modified = {2012-04-15 09:06:59 +0000},
-	Isbn = {0-7695-2090-1},
-	Pages = {13--},
-	Publisher = {IEEE Computer Society},
-	Series = {PERCOM '04},
-	Title = {Learning to Detect User Activity and Availability from a Variety of Sensor Data},
-	Url = {http://dl.acm.org/citation.cfm?id=977406.978698},
-	Year = {2004},
-	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=977406.978698}}
-
-@misc{Entscheidungstheorie,
-	Date-Added = {2012-04-15 08:40:11 +0000},
-	Date-Modified = {2012-04-15 08:40:56 +0000},
-	Month = {04},
-	Title = {Entscheidungstheorie},
-	Url = {http://de.wikipedia.org/wiki/Entscheidungstheorie},
-	Year = {2012},
-	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Entscheidungstheorie}}
-
-@misc{Entscheidungsverfahren,
-	Date-Added = {2012-04-15 08:31:53 +0000},
-	Date-Modified = {2012-04-15 08:34:02 +0000},
-	Lastchecked = {Sonntag, 15. April 2012},
-	Month = {04},
-	Title = {Entscheidungsverfahren},
-	Url = {http://de.wikipedia.org/wiki/Entscheidungsverfahren},
-	Year = {2012},
-	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Entscheidungsverfahren}}
-
-@misc{Entscheidungssicherheit,
-	Date-Added = {2012-04-15 08:12:08 +0000},
-	Date-Modified = {2012-04-15 08:32:39 +0000},
-	Lastchecked = {Sonntag, 15. April 2012},
-	Month = {04},
-	Title = {Entscheidungssicherheit},
-	Url = {http://de.wikipedia.org/wiki/Entscheidungstheorie#Unsicherheit},
-	Year = {2012},
-	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Entscheidungstheorie#Unsicherheit}}
-
-@misc{KybernetischeBetrachtung,
-	Date-Added = {2012-04-15 07:59:13 +0000},
-	Date-Modified = {2012-04-15 08:32:43 +0000},
-	Lastchecked = {Sonntag, 15. April 2012},
-	Month = {04},
-	Read = {0},
-	Title = {Entscheidung - Kybernetische Betrachtung},
-	Url = {http://de.wikipedia.org/wiki/Entscheidung#Kybernetische_Betrachtung},
-	Year = {2012},
-	Bdsk-Url-1 = {http://de.wikipedia.org/wiki/Entscheidung#Kybernetische_Betrachtung}}
+@inproceedings{Marion:2012:RCS:2338714.2338721,
+ author = {Marion, Charles and Jomier, Julien},
+ title = {Real-time Collaborative Scientific WebGL Visualization with WebSocket},
+ booktitle = {Proceedings of the 17th International Conference on 3D Web Technology},
+ series = {Web3D '12},
+ year = {2012},
+ isbn = {978-1-4503-1432-9},
+ location = {Los Angeles, California},
+ pages = {47--50},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2338714.2338721},
+ doi = {10.1145/2338714.2338721},
+ acmid = {2338721},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {WebGL, WebSocket, collaborative, remote rendering, web 3D},
+}
